# ECS-Frame-And-Flowchart-Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  init.bat  vcpkg.json.disabled
README/: testfile.fc
example files/: 示例文件.fc
old src/: CMakeLists.txt
old src/src/Convertor/: CMakeLists.txt  CanvasConvertor.cpp  CanvasConvertor.h
old src/src/DataModels/: CMakeLists.txt
old src/src/DataModels/Basic/: BasePoint.cpp  BasicPoint.h
old src/src/FEPlugins/: CMakeLists.txt
old src/src/FEPlugins/ClassicLink/: CMakeLists.txt  ClassicLink.cpp  ClassicLink.h  LinkItem.cpp  LinkItem.h  resources.qrc
old src/src/FEPlugins/PathBrokenLine/: BrokenLineItem.cpp  BrokenLineItem.h  PathBrokenLine.cpp  PathBrokenLine.h  resources.qrc
old src/src/FEPlugins/ShapeCircle/: CircleItem.cpp  CircleItem.h  ShapeCircle.cpp  ShapeCircle.h  resources.qrc
old src/src/FEPlugins/ShapeRect/: RectItem.cpp  RectItem.h  ShapeRect.cpp  ShapeRect.h  resources.qrc
old src/src/FEPlugins/ShapeSmile/: ShapeSmile.cpp  ShapeSmile.h  SmileItem.cpp  SmileItem.h  resources.qrc
old src/src/GraphicsComponents/: CMakeLists.txt  CanvasSpace.cpp  CanvasSpace.h
old src/src/GraphicsComponents/CanvasBase/: CanvasElement.cpp  CanvasElement.h  CanvasPointF.cpp  CanvasPointF.h
old src/src/GraphicsComponents/CanvasComponent/: AdjustmentHandlerItem.cpp  AdjustmentHandlerItem.h  HighlightHandlerItem.cpp  HighlightHandlerItem.h
old src/src/GraphicsComponents/Manager/: BindPointManager.cpp  BindPointManager.h
old src/src/IPlugin/: CMakeLists.txt  IPlugin.h
old src/src/Main/: CMakeLists.txt  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.css
old src/src/Main/menus/: HeadToolBar.h  NamedBar.h
old src/src/Utils/: CMakeLists.txt  ChainBuilder.h  CommonFunctions.h  TypeDefine.h
old src/src/Utils/PropertyManager/: PropertyManager.cpp  PropertyManager.h
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  FApplication.cpp  FApplication.h  FMainWindow.cpp  FMainWindow.h  FSystem.h
src/Application/ExampleSystem/: ExampleSystem.cpp  ExampleSystem.h
src/Application/menus/: SideToolBar.h
src/Frame/: CMakeLists.txt  ECSFrame.h  SubSystemFrame.h
src/Frame/ECSFrame/: Forward.h  SystemUtils.cpp  SystemUtils.h
src/Frame/ECSFrame/Global/: GlobalPool.cpp  GlobalPool.h  GlobalQuery.cpp  GlobalQuery.h
src/Frame/ECSFrame/Identity/: EBit.cpp  EBit.h  Signature.h
src/Frame/ECSFrame/Interface/: IComponent.cpp  IComponent.h  IEntity.cpp  IEntity.h  IQuery.h  ISystem.cpp  ISystem.h  ISystemHandler.h
src/Frame/ECSFrame/Model/Component/: IComponent.cpp  IComponent.h  IComponentHandler.h
src/Frame/ECSFrame/Model/Entity/: IEntity.cpp  IEntity.h
src/Frame/ECSFrame/Model/System/: ISystem.cpp  ISystem.h  ISystemHandler.h
src/Frame/ECSFrame/Notify/: Notifier.cpp  Notifier.h
src/Frame/ECSFrame/Pointer/: EPointer.h
src/Frame/ECSFrame/Query/: IQuery.cpp  IQuery.h  QueryPreset.h
src/Frame/ECSFrame/Range/: ERange.h  RangeSet.h
src/Frame/SubSystemFrame/: System.h  SystemUtils.h
src/Frame/SubSystemFrame/Interface/: BevyLikeSystem.h  IComponent.cpp  IComponent.h  IEntity.cpp  IEntity.h  IQuery.h  ISubSystem.h  ISubSystemObject.h  ISystem.cpp  ISystem.h  SystemExample.h
src/Main/: CMakeLists.txt  main.cpp
